style: Search Input correct button size on mobile, use make-icon mixin.

--- a/src/components/bs5/searchInput/searchInput.scss
+++ b/src/components/bs5/searchInput/searchInput.scss
@@ -5,6 +5,7 @@
 .qld-search-input {
   @extend %search-input-variables;
   $border-radius: 0.25rem;
+  --_size: 3rem; // 48px;
   //
   display: flex;
   position: relative;
@@ -30,8 +31,8 @@
   }
 
   .form-control {
-    min-height: 52px;
-    padding: 0.75rem 4rem 0.75rem 1rem;
+    min-height: var(--_size);
+    padding: 0 4rem 0 1rem;
     border: {
       color: var(--border-color);
       style: solid;
@@ -75,16 +76,13 @@
   }
 
   > button {
-    // position: absolute;
-    // top: 0;
-    // bottom: 0;
-    // right: 0;
     border-radius: 0 $border-radius 0 0;
     padding: 0;
     margin: 0;
-    width: 3rem;
+    width: var(--_size);
     box-shadow: none;
     min-width: auto;
+    min-height: auto;
     flex-shrink: 0;
 
     &:hover,
@@ -98,18 +96,14 @@
 
     //prep a button "search-icon" which is invoked at smaller screeen sizes below
     .btn-icon {
-      display: block;
-      width: 1.5rem;
-      height: 1.5rem;
-      height: 1.5rem;
-      margin-left: 0.65rem;
-      margin-right: 0;
-      background-color: var(--icon-color-on-btn);
-      mask: var(--icon) center center / 1.25rem no-repeat;
+      @include mixins.make-icon($name: "search", $size: "md");
+      --qld-icon-color: var(--icon-color-on-btn);
     }
   }
 
   @include media-breakpoint-up(md) {
+    --_size: 3.25rem; // 52px;
+
     > button {
       padding: calc(0.75rem - 0.125rem) var(--qld-btn-padding-x);
       margin: 0;
